Snippets/Colored Mentions/ColoredMentionsSource.css
.messageContent_c19a55, .compact_c19a55 .contents_c19a55 {
  position: unset !important;
}
.mention, .roleMention__75297 {
  position: unset;
  filter: none;
}
.mentioned__5126c .interactive:is(.roleMention__75297, .mention):before, .mentioned__5126c .interactive:is(.roleMention__75297, .mention):after {
  content: "";
  position: absolute;
  background-color: var(--icon-feedback-warning);
  filter: saturate(var(--saturation-factor,1));
  pointer-events: none;
}
.mentioned__5126c .interactive:is(.roleMention__75297, .mention):before {
  top: 0;
  left: 0;
  bottom: 0;
  width: 2px;
}
.mentioned__5126c .interactive:is(.roleMention__75297, .mention):after {
  border-radius: 0 var(--radius-xs) var(--radius-xs) 0;
  inset: 0;
  opacity: 8%;
  z-index: -1;
}
.roleMention__75297[style]:before, .roleMention__75297[style]:after {
  background-color: currentColor !important;
}
.interactive:is(.roleMention__75297, .mention) ~ .interactive, .repliedTextPreview_c19a55 .interactive {
  &:before, &:after {
    content: unset;
  }
}
.mentioned__5126c:has(.roleMention__75297, .mention) {
  background: none !important;
  z-index: 0;
  &:hover, &.selected__5126c {
    .mention:after, .roleMention__75297:after {
      opacity: 4%;
    }
  }
}

